@@ -2,17 +2,31 @@ package io.synchro.client.android;
 
 import junit.framework.TestCase;
 
-import java.net.URI;
+import java.io.IOException;
+import java.net.URL;
 
 /**
  * Created by blake on 12/8/14.
  */
 public class TransportAndroidHttpClientTest extends TestCase
 {
-    private static final String testEndpoint = "http://localhost:1337/api/samples";
+    // 10.0.2.2 magic explained here
+    // http://stackoverflow.com/questions/5806220/how-to-connect-to-my-http-localhost-web-server-from-android-emulator-in-eclips
 
-    public void testNothing()
+    private static final String testEndpoint = "http://10.0.2.2:1337/api/samples";
+
+    public void testGetAppDefinition()
+            throws IOException
     {
-        TransportAndroidHttpClient transport = new TransportAndroidHttpClient(URI.create(testEndpoint));
+        TransportAndroidHttpClient transport = new TransportAndroidHttpClient(new URL(testEndpoint));
+        JObject expectedObject = new JObject();
+
+        expectedObject.put("name", new JValue("synchro-samples"));
+        expectedObject.put("version", new JValue("0.0.0"));
+        expectedObject.put("description", new JValue("Synchro API Samples"));
+        expectedObject.put("mainPage", new JValue("menu"));
+        expectedObject.put("author", new JValue("Bob Dickinson <bob@synchro.io> (http://synchro.io/)"));
+
+        assertEquals(expectedObject, transport.getAppDefinition());
     }
 }
